# Cpp-OpenGL-Setup

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  hello_hexagonal_star.cpp
MSVC/: README.md  README_CN.md
MinGW/: README.md  README_CN.md
hello_world/: hello_world.cpp
include/glad/: glad.h
lib/: glad.c
